syntax = "proto3";
package blog;

option go_package = "./blog";

message Blog {
  string blog_id = 1;
  int32 author_id = 2;
  string title = 3;
  string content = 4;
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
  rpc FindBlog(FindBlogRequest) returns (FindBlogResponse) {};
}

message CreateBlogRequest { Blog blog = 1; }
message CreateBlogResponse { Blog blog = 1; }

message FindBlogRequest { string blog_id = 1; }
message FindBlogResponse { Blog blog = 1; }
